[package]
name = "dayone_to_obsidian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
chrono-tz = "0.8.3"
serde = {version="1.0.171", features=["derive"]}
serde_json = "1.0.103"
structopt = "0.3.26"
